# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clapy"
version = "1.0.0"
description = "Automated invocation of clean architecture use cases in Python."
readme = "README.md"
authors = [{ name = "Ben Talese", email = "ben.talese@gmail.com" }]
license = { file = "LICENCE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["clean", "architecture", "clapy", "use", "case"]
requires-python = ">=3.11"

[project.optional-dependencies]
dependency_injector = ["dependency_injector >= 4.41.0"]

[project.urls]
Homepage = "https://github.com/BenTalese/clapy"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
