[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clapy"
version = "2.2.2"
description = "Automated invocation of clean architecture use cases in Python."
readme = "README.md"
authors = [{ name = "Ben Talese", email = "ben.talese@gmail.com" }]
license = { file = "LICENCE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
keywords = ["clean", "architecture", "clapy", "use", "case",
    "use-case", "design", "patterns", "python3", "asyncio",
    "dependency", "injection", "onion"]
requires-python = ">=3.7"

[project.optional-dependencies]
dependency_injector = ["dependency_injector >= 4.41.0"]

[project.urls]
homepage = "https://github.com/BenTalese/clapy"
